day-1 issue closed i.e alignment

--- a/my-app/src/AdminSide/Check.css
+++ b/my-app/src/AdminSide/Check.css
@@ -7,3 +7,12 @@
     gap: 20px;
       
 }
+.main-container{
+    display: flex;
+    justify-content: space-between;
+    padding: 40px;
+}
+
+.main-container>div:nth-child(1){
+    width: 20%;
+}
